# cloud-detect

./: .gitignore  COPYING.MIT  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: cd.yml  ci.yml
src/: consts.rs  lib.rs
src/blocking/: mod.rs
src/blocking/providers/: akamai.rs  alibaba.rs  aws.rs  azure.rs  digitalocean.rs  gcp.rs  mod.rs  oci.rs  openstack.rs  vultr.rs
src/providers/: akamai.rs  alibaba.rs  aws.rs  azure.rs  digitalocean.rs  gcp.rs  mod.rs  oci.rs  openstack.rs  vultr.rs
