[package]
name = "cloud-detect"
version = "1.1.0"
edition = "2021"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
description = "Detect a host's cloud service provider"
repository = "https://github.com/nikhil-prabhu/cloud-detect"
license = "GPL-3.0"
documentation = "https://docs.rs/cloud-detect"
keywords = ["cloud", "aws", "azure", "gcp", "hyperscaler"]

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"
tracing = "0.1.40"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
tracing-subscriber = "0.3.19"
