[package]
name = "cloud-detect"
version = "2.2.0"
edition = "2021"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
description = "Detect a host's cloud service provider"
repository = "https://github.com/nikhil-prabhu/cloud-detect"
license = "GPL-3.0"
documentation = "https://docs.rs/cloud-detect"
keywords = ["cloud", "aws", "azure", "gcp", "hyperscaler"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["blocking"]

[dependencies]
anyhow = { version = "1.0.94", optional = true }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.29.1", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.73"
tracing = "0.1.40"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.94"
tempfile = "3.14.0"
tracing-subscriber = "0.3.19"
wiremock = "0.6.2"
mockito = "1.6.1"

[features]
default = []
blocking = ["reqwest/blocking", "anyhow"]
