[package]
name = "cloud-detect"
version = "3.0.1"
edition = "2021"
authors = ["Nikhil Prabhu <nikhilprabhu98@gmail.com>"]
description = "Detect a host's cloud service provider"
repository = "https://github.com/nikhil-prabhu/cloud-detect"
license = "GPL-3.0 OR MIT"
documentation = "https://docs.rs/cloud-detect"
keywords = ["cloud", "aws", "azure", "gcp", "hyperscaler"]

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["blocking"]

[dependencies]
anyhow = { version = "1.0.98", optional = true }
reqwest = { version = "0.12.15", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
tracing = "0.1.41"
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.98"
tempfile = "3.19.1"
tracing-subscriber = "0.3.19"
wiremock = "0.6.3"
mockito = "1.7.0"

[features]
default = []
blocking = ["reqwest/blocking", "anyhow"]
